# django-graphql-benchmarks

./: .gitignore  Dockerfile  README.md  dashboard.py  format-results.py  pyproject.toml  run.sh
benchmarks/: dashboard.py  drf.js  format-results.py  graphene.js  json.js  run-benchmarks.sh
k6_scripts/: strawberry.js
main/: settings.py  urls.py
