[tool.poetry]
name = "django-graphql-benchmarks"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
Django = "==3.2.*" # LTS
graphene = "<3"
graphene-django = "*"
gunicorn = "*"
whitenoise = "*"
numpy = "*"
dash = "*"
dash-core-components = "*"
dash-html-components = "*"
dash-renderer = "*"
dash-table = "*"
pyinstrument = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
flake8-black = "*"
flake8-bugbear = "*"
pdbpp = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
